got artists and albums working

--- a/browser/index.html
+++ b/browser/index.html
@@ -7,9 +7,10 @@
 	<link href="/style.css" rel="stylesheet" />
 	<script src="/lodash/index.js"></script>
 	<script src="/angular/angular.js"></script>
-  <script src='/angular-ui-router/build/angular-ui-router.js'></script>
+  	<script src='/angular-ui-router/build/angular-ui-router.js'></script>
 	<script src="/js/module.js"></script>
-  <script src="/js/states/albums.js"></script>
+  	<script src="/js/states/albums.js"></script>
+  	<script src="/js/states/artists.js"></script>
 	<script src="/js/controllers/album.js"></script>
 	<script src="/js/controllers/albums.js"></script>
 	<script src="/js/controllers/player.js"></script>
@@ -33,7 +34,7 @@
 				</section>
 				<section>
 					<h4 class="playlist-item">
-						<a ng-click="viewArtists()" href="#">ARTISTS</a>
+						<a ng-click="viewArtists()" href="#/artists">ARTISTS</a>
 					</h4>
 				</section>
 			</sidebar>
@@ -92,22 +93,6 @@
 				</table>
 			</div>
 
-			<div ng-controller="AlbumsCtrl" ng-show="showMe">
-				<h3>Albums</h3>
-				<div class="row">
-					<div ng-repeat="album in albums" class="col-xs-4">
-						<a class="thumbnail" ng-click="viewAlbum(album._id)" href="#">
-							<img ng-src="{{ album.imageUrl }}">
-							<div class="caption">
-								<h5>
-									<span>{{ album.name }}</span>
-								</h5>
-								<small>{{ album.songs.length }} songs</small>
-							</div>
-						</a>
-					</div>
-				</div>
-			</div>
 
 			<div class="album" ng-controller="AlbumCtrl" ng-show="showMe">
 				<p>
