--- a/browser/index.html
+++ b/browser/index.html
@@ -11,6 +11,7 @@
 	<script src="/js/module.js"></script>
   	<script src="/js/states/albums.js"></script>
   	<script src="/js/states/artists.js"></script>
+  	<script src="/js/states/album.js"></script>
 	<script src="/js/controllers/album.js"></script>
 	<script src="/js/controllers/albums.js"></script>
 	<script src="/js/controllers/player.js"></script>
@@ -43,14 +44,7 @@
 		<div class="col-xs-10">
       <ui-view></ui-view>
 
-			<!-- <div ng-controller="ArtistsCtrl" ng-show="showMe">
-				<h3>Artists</h3>
-				<div class="list-group">
-					<div class="list-group-item" ng-repeat="artist in artists">
-						<a ng-click="viewArtist(artist._id)" href="#">{{ artist.name }}</a>
-					</div>
-				</div>
-			</div>
+			<!-- 
 
 			<div ng-controller="ArtistCtrl" ng-show="showMe">
 				<h3>{{ artist.name }}</h3>
