got artist working now

--- a/browser/index.html
+++ b/browser/index.html
@@ -9,6 +9,7 @@
 	<script src="/angular/angular.js"></script>
   	<script src='/angular-ui-router/build/angular-ui-router.js'></script>
 	<script src="/js/module.js"></script>
+	<script src="/js/states/artist.js"></script>
   	<script src="/js/states/albums.js"></script>
   	<script src="/js/states/artists.js"></script>
   	<script src="/js/states/album.js"></script>
@@ -88,34 +89,7 @@
 			</div>
 
 
-			<div class="album" ng-controller="AlbumCtrl" ng-show="showMe">
-				<p>
-					<h3>{{ album.name }}</h3>
-					<img ng-src="{{ album.imageUrl }}" class="img-thumbnail">
-				</p>
-				<table class='table'>
-					<thead>
-						<tr>
-							<th></th>
-							<th>Name</th>
-							<th>Artists</th>
-							<th>Genres</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="song in album.songs" ng-class="{active: isCurrent(song)}">
-							<td>
-								<button ng-hide="isCurrent(song)" ng-click="start(song)" class="btn btn-default btn-xs">
-									<span class="glyphicon glyphicon-play"></span>
-								</button>
-							</td>
-							<td>{{ song.name }}</td>
-							<td><span ng-repeat="artist in song.artists">{{ artist.name }} </span></td>
-							<td>{{ song.genres.join(', ') }}</td>
-						</tr>
-					</tbody>
-				</table>
-			</div> -->
+			
 
 		</div>
 
